Fixed horizontal overflow with media query for mobile displays.

--- a/portfolioProject/css/styles.css
+++ b/portfolioProject/css/styles.css
@@ -159,3 +159,13 @@ img {
     width:88px;
     height:31px
 }
+
+@media screen and (max-width: 667px) {
+    body {
+        overflow-x: hidden !important;
+    }
+    .container {
+        max-width: 100% !important;
+        overflow-x: hidden !important;
+    }
+}
